@@ -181,6 +181,7 @@ $RECYCLE.BIN/
 
 # Mac crap
 .DS_Store
+default.profraw
 
 
 #############
@@ -195,11 +196,13 @@ $RECYCLE.BIN/
 dist/
 build/
 eggs/
+lib/
 parts/
 var/
 sdist/
 develop-eggs/
 .installed.cfg
+pyvenv.cfg
 
 # Installer logs
 pip-log.txt
