@@ -1,6 +1,6 @@
 [buildout]
 extends =
-    https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/test-5.x.cfg
 
 package-name = collective.sentry
 package-extras = [test]
@@ -10,6 +10,11 @@ parts +=
     i18ndude
     omelette
     scripts
+
+[versions]
+# Taken from Zope 4.x versions file
+# Newer twine creates version conflict with importlib-metadata
+twine = 1.15.0
 
 [i18ndude]
 recipe = zc.recipe.egg
