@@ -10,10 +10,17 @@ setup(name='collective.sentry',
       description="Replace default Plone error_log to send data to GetSentry service",
       long_description=read('README.txt') + '\n',
       classifiers=[
-        "License :: OSI Approved :: GNU General Public License (GPL)",
-        "Programming Language :: Python :: 2.7",
-        "Programming Language :: Python",
-        "Framework :: Plone",
+        'License :: OSI Approved :: GNU General Public License (GPL)',
+        'Framework :: Plone',
+        'Framework :: Plone :: 5.2',
+        'Programming Language :: Python :: 2',
+        'Programming Language :: Python :: 2.7',
+        'Programming Language :: Python :: 3',
+        'Programming Language :: Python :: 3.5',
+        'Programming Language :: Python :: 3.6',
+        'Programming Language :: Python :: 3.7',
+        'Programming Language :: Python :: 3.8',
+        'Programming Language :: Python :: Implementation :: CPython',
       ],
       keywords='enfold getsentry error_log plone',
       author='Enfold Systems, Inc.',
